@@ -1,3 +1,5 @@
+ - ceiling scaling values
+
 0.0.4:
  - properly close file selection dialog
  - implemented automatic screen sharing when in fullscreen mode
